# universal-lab-parser

./: .gitignore  CODE_IMPROVEMENTS.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_GUIDE.md  STRATEGY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  instrument_support.md
docs/: WATERS_PARSER.md
examples/: agilent_parser_example.py  basic_usage.py  quickstart.ipynb  test_parsers.py  waters_parser_example.py
examples/sample_data/: biotek_sample.csv
lab_parser/: __init__.py  api.py  detectors.py
lab_parser/parsers/: __init__.py  base.py  biotek.py  molecular_devices.py  nanodrop.py  quantstudio.py
lab_parser/utils/: __init__.py  logger.py
tests/: __init__.py  test_parsers.py
tests/fixtures/: README.md
universal_lab_parser/: __init__.py  batch.py  cli.py  cli_enhanced.py  config.py
universal_lab_parser/core/: __init__.py  base_parser.py  data_model.py  exceptions.py
universal_lab_parser/parsers/: __init__.py  agilent.py  thermo.py  waters.py
universal_lab_parser/utils/: __init__.py  file_detection.py  file_validator.py  logger.py
