[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-lab-parser"
version = "0.1.0"
description = "Parse proprietary lab instrument data files into standard, usable formats"
readme = "README.md"
authors = [
    {name = "Pravinth", email = "144460619+pravinth24@users.noreply.github.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["lab", "instruments", "HPLC", "mass-spec", "chromatography", "data-parser", "analytical-chemistry"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "click>=8.0.0",
    "tqdm>=4.60.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocstrings[python]>=0.19.0",
]
all = [
    "pyarrow>=10.0.0",  # For Parquet export
    "lxml>=4.9.0",      # For XML/AnIML export
]

[project.urls]
Homepage = "https://github.com/pravinth24/universal-lab-parser"
Documentation = "https://github.com/pravinth24/universal-lab-parser/tree/main/docs"
Repository = "https://github.com/pravinth24/universal-lab-parser"
"Bug Tracker" = "https://github.com/pravinth24/universal-lab-parser/issues"

[project.scripts]
ulp = "universal_lab_parser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["universal_lab_parser*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=universal_lab_parser --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
