[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-lab-parser"
version = "2.0.0"
description = "Parse ANY lab instrument data in seconds. Plate readers, qPCR, flow cytometry, and more."
readme = "README.md"
authors = [
    {name = "Pravinth", email = "144460619+pravinth24@users.noreply.github.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["lab", "instruments", "plate-reader", "qpcr", "nanodrop", "flow-cytometry", "biotek", "data-parser"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
all = [
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pravinth24/universal-lab-parser"
Repository = "https://github.com/pravinth24/universal-lab-parser"
"Bug Tracker" = "https://github.com/pravinth24/universal-lab-parser/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lab_parser*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
